<resources>
    <string name="app_name">SCDA</string>

    <string name="submit">Enviar</string>
    <string name="datepicker">Y-m-d</string>
    <string name="enter">Ingrese...</string>
    <string name="grade">Ingrese nota...</string>
    <string name="notice">Ingrese comunicado...</string>
    <string name="spinner_notice">Seleccione</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_piechart">piechart</string>
    <string name="action_steppedareachart">steppedareachart</string>
    <string name="action_gauge">gauge</string>

    <!-- Strings related to act_4_login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_in">Log in</string>
    <string name="error_invalid_email">El email es invalido</string>
    <string name="error_invalid_password">El password es muy corto</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_field_length_20">La nota debe de ser menor igual a 20</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
