<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/act_2_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/act_3_nav_header_main"
        app:menu="@menu/activity_main_drawer"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background_pattern"
            >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/notice_warning" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/spinnerDropDownItemStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/white"
                android:prompt="@string/spinner_notice" />

            <AutoCompleteTextView
                android:id="@+id/txtMesssage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:hint="@string/notice"
                android:inputType="textMultiLine"
                android:padding="5dp" />

            <Button
                android:id="@+id/submit_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMesssage"
                style="?android:textAppearanceSmall"
                android:background="@drawable/btn_primary"
                android:text="@string/submit"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/colorWhite"
            />
            <!--android:layout_margin="@dimen/activity_vertical_margin"-->

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
