<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/act_2_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <!--<android.support.design.widget.NavigationView-->
        <!--android:id="@+id/nav_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:headerLayout="@layout/act_3_nav_header_main"-->
        <!--app:menu="@menu/activity_main_drawer"-->
        <!--/>-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        tools:context="com.example.software.activity.teacher.ModuleGradesEnterGradeActivity">


        <AutoCompleteTextView
            android:id="@+id/txtTaskId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background_pattern"
            >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center|clip_vertical"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/task" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTarea"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="Tarea:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/txtTarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:hint="@string/enter"
                    android:inputType="text"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFechaEntrega"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="Fecha entrega:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etFechaEntrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:hint="@string/datepicker"
                    android:editable="false"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNotaProfesor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="Nota:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerNota"
                    style="@style/spinnerDropDownItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:prompt="@string/spinner_notice" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEstado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="Estado:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerEstado"
                    style="@style/spinnerDropDownItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:prompt="@string/spinner_notice" />

            </LinearLayout>

            <Button
                android:id="@+id/submit_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMesssage"
                style="?android:textAppearanceSmall"
                android:background="@drawable/btn_primary"
                android:text="@string/submit"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/colorWhite"
                />

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
